--- a/public/mobiles.css
+++ b/public/mobiles.css
@@ -535,4 +535,13 @@
     transition: 0.2s;
     line-height: 100;
   }
+  #user {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border: 1px solid var(--border-colors);
+  }
+  .logout {
+    width: 40px !important;
+  }
 }
