--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,6 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
-  color: #2e2e2e;
 }
 :root {
   --task-color-1: #fe5147;
@@ -17,6 +16,8 @@
   --add-project-color: #bfce69;
   --add-section-color: #fde181;
   --border-colors: #a1afa4d0;
+  /* --dark-mode-header: rgb(48, 43, 43);
+  --dark-mode-main: rgb(70, 62, 62); */
 }
 @media screen and (min-width: 426px) {
   body {
@@ -27,6 +28,7 @@
     display: grid;
     grid-template-columns: minmax(5%, 80px) 1fr;
   }
+
   header {
     height: 100vh;
     display: flex;
@@ -38,6 +40,9 @@
   .user-profile > img {
     width: 100%;
     height: auto;
+  }
+  .logo {
+    background-color: white;
   }
   .red {
     background-color: var(--task-color-1);
